--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
+<html>
 
+<body style="background-color:lightgrey;">
+
+
+  
+<h1 style="color:black; text-align:center; font-size:200%;"> Top NBA Players </h1>
+
+  
+  <ol>
+    <li>Michael Jordan</li>
+        <p style= "text-align:center"> Accolades: 6 NBA titles, 6 Finals MVPs, 5 reg. season MVPs </p>
+    <img src= "https://upload.wikimedia.org/wikipedia/en/thumb/c/c7/Michael_Jordan_crying.jpg/220px-Michael_Jordan_crying.jpg" style="width:25%; height:50%;" >
+
+    
+         
+    <li>Kobe Bryant</li>
+       <p style= "text-align:center"> Accolades: 5 NBA titles, 2 Finals MVPs, 1 reg. season MVPs </p>
+    <img src= "https://images-na.ssl-images-amazon.com/images/I/51ioT%2BdQusL.jpg" style="width:25%; height:50%;">
+ 
+    <li>Lebron James</li>
+    <p style="text-align:center;"> Accolades: 2 NBA titles, 2 Finals MVPs, 4 reg. season MVPs</p>
+    <img src= "https://i.ytimg.com/vi/ZatiWqQjU7M/maxresdefault.jpg" style="width:25%; height:50%;">
+ 
+    <li>Kareem Abdul-Jabbar</li>
+    <p style="text-align:center;"> Accolades: 6 NBA titles, 2 Finals MVPs, 6 reg. season MVPs </p>
+    <img src=https://thenypost.files.wordpress.com/2018/12/kareem-abdul-jabbar.jpg?quality=90&strip=all&w=618&h=410&crop=1 style="width:25%; height:50%;">
+ 
+  <li>Giannis Antetokounmpo</li>
+    <p style="text-align:center;"> Accolades: GOAT STATUS, 1 reg. season MVP</p>
+    <img src= "http://i.imgur.com/4s7OfJT.jpg    <img src= "http://i.imgur.com/4s7OfJT.jpg style="width:25%; height:50%;"> 
+   
+  </ol>
+               <h3>  <iframe width="1000" height="700" src="https://www.youtube.com/embed/R16Rlw_g46U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </h3>                                                                                <br>  <a href="https://bleacherreport.com/articles/1795233-10-greatest-nba-players-of-all-time#slide0">Link to reference of other NBA player list:</a>                        
+  <div class="container" >
+  <form action="action_page.php">
+    <div class="row">
+      <div class="col-25">
+        <label for="fname">First Name</label>
+      </div>
+      <div class="col-75">
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-25">
+        <label for="lname">Last Name</label>
+      </div>
+      <div class="col-75">
+        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-25">
+        <label for="agree">Do You Agree?</label>
+      </div>
+      <div class="col-75">
+        <select id="agree" name="agree">
+          <option value="yes">Yes</option>
+          <option value="no">No</option>
+          <option value="somewhat">Somewhat</option>
+        </select>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-25">
+        <label for="explain">Explain</label>
+      </div>
+      <div class="col-75">
+        <textarea id="explain" name="explain" placeholder="Write something.." style="height:200px"></textarea>
+      </div>
+    </div>
+    <div class="row">
+      <input type="submit" value="Submit">
+    </div>
+  </form>
+    </div>
+
+
+
+</body>
+</html>
