--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
       </head>
 
 <body style="background-color:lightgrey;">
+  
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="Projects.html">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
 
 
   
