--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="Projects.html">News</a>
+  <a href="projects.html">News</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
