--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="background-color:lightgrey;">
   
   <div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="index.html" href="#home">Home</a>
   <a href="projects.html">News</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
