--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,12 @@
+<html> 
+<div class="topnav">
+  <a class="index.html" href="#home">Home</a>
+  <a href="projects.html">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
 <
 body
 >
+  </html>
