--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <html> 
 <div class="topnav">
-  <a class="index.html" href="#home">Home</a>
-  <a href="projects.html">News</a>
+  <a  href="index.html">Home</a>
+  <a class="active"href="projects.html">News</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
