--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   
   <div class="topnav">
   <a class="index.html" href="#home">Home</a>
-  <a href="projects.html">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="projects.html"> href="#home">My App </a>
+  <a href="favorites.html"> href="#home">Favorites</a>
 </div>
 
 
