--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   
   <div class="topnav">
   <a class="index.html" href="#home">Home</a>
-  <a href="projects.html"> href="#home">My App </a>
-  <a href="favorites.html"> href="#home">Favorites</a>
+  <a href="projects.html"> My App </a>
+  <a href="favorites.html"> Favorites</a>
 </div>
 
 
