--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,8 @@
 <html> 
 <div class="topnav">
   <a  href="index.html">Home</a>
-  <a class="active"href="projects.html">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a class="active"href="projects.html">My App</a>
+  <a href="#Favorites">Favorites</a>
 </div>
 
   <iframe width="390" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/bMJ9-U_VJbLJMdL0pspaorFGPmt5-DzvUTU9zVx4rSM/embed"></iframe>
