--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,11 @@
 <html> 
+    <head>
+    <title>my-first-website</title>
+    <LINK href = "style.css" rel= "stylesheet" type="text/css">
+      </head>
+      
+<body style="background-color:lightgrey;">
+  
 <div class="topnav">
   <a  href="index.html">Home</a>
   <a class="active"href="projects.html">My App</a>
@@ -6,5 +13,5 @@
 
   <iframe width="390" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/bMJ9-U_VJbLJMdL0pspaorFGPmt5-DzvUTU9zVx4rSM/embed"></iframe>
 
-
+  
   </html>
