--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
   
 <div class="topnav">
   <a  href="index.html">Home</a>
-  <a class="active"href="projects.html">My App</a>
+  <a class="active"href="projects.html">Clicker App</a>
 </div>
 
   <iframe width="390" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/bMJ9-U_VJbLJMdL0pspaorFGPmt5-DzvUTU9zVx4rSM/embed"></iframe>
