--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   
   <div class="topnav">
   <a class="index.html" href="#home">Home</a>
-  <a href="projects.html"> My App </a>
+  <a href="projects.html"> Clicker App </a>
+  <a href="app.html"> Color Sleuth </a>
 </div>
 
 
