--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 <h1 style="color:black; text-align:center; font-size:200%;"> Elan Appelbaum's Website </h1>
   
   Fun Facts:
-  
-  1. I have two older brothers
-  2. I have a dog
-  3. I like to play basketball
-  4. I love music
-  5. My favorite NBA team is the Bucks
+ <ul> 
+   <li>1. I have two older brothers</li>
+   <li> 2. I have a dog</li>
+  <li>3. I like to play basketball </li>
+  <li> 4. I love music </li>
+  <li> 5. My favorite NBA team is the Bucks </li>
+  </ul>
 
   
 
