--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   
 <h1 style="color:black; text-align:center; font-size:200%;"> Elan Appelbaum's Website </h1>
   
-  Fun Facts:
- <ul> 
+  <h2>Fun Facts:</h2>
+ <ul style="color:white; font-size:18px;"> 
    <li>1. I have two older brothers</li>
    <li> 2. I have a dog</li>
   <li>3. I like to play basketball </li>
