--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="topnav">
   <a class="index.html" href="#home">Home</a>
   <a href="projects.html"> Clicker App </a>
-  <a href="app.html"> Color Sleuth </a>
+  <a href="app.html"> Digital Scene </a>
 </div>
 
 
